@@ -13,6 +13,10 @@
    - stevesk@cvs.openbsd.org 2002/06/10 16:56:30
      [ssh-keysign.8]
      merge in stuff from my man page; ok markus@
+   - stevesk@cvs.openbsd.org 2002/06/10 17:36:23
+     [ssh-add.1 ssh-add.c]
+     use convtime() to parse and validate key lifetime.  can now
+     use '-t 2h' etc.  ok markus@ provos@
 
 20020609
  - (bal) OpenBSD CVS Sync
@@ -878,4 +882,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2203 2002/06/11 15:50:13 mouring Exp $
+$Id: ChangeLog,v 1.2204 2002/06/11 15:51:54 mouring Exp $
